# LocalTaskManager

./: CMakeLists.txt  Dockerfile  README.md
include/models/: task.hxx
src/: main.cpp  main.cxx
